event calender modal z-index issue

--- a/src/css/view/event-calendar.scss
+++ b/src/css/view/event-calendar.scss
@@ -46,7 +46,7 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		display: flex;
+		display: none;
 		align-items: center;
 		justify-content: center;
 		z-index: -1;
@@ -65,6 +65,7 @@
 		&.eael-ec-popup-ready {
 			z-index: 99999;
 			opacity: 1;
+            display: flex;
 		}
 	}
 
